--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -26,12 +26,13 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_CGROUP_BPF=y
-CONFIG_SCHED_HMP=y
-CONFIG_SCHED_HMP_CSTATE_AWARE=y
-CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_TUNE=y
+CONFIG_STUNE_ASSIST=y
+CONFIG_CPUSETS_ASSIST=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
@@ -105,8 +106,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_BOOST=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
