--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -403,6 +403,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_E7S_GESTURE=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_E7S_TEST_REPORTING=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
+CONFIG_INPUT_QTI_HAPTICS=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_FPC=y
