--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -24,7 +24,10 @@ CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
 CONFIG_CGROUP_SCHED=y
+CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
