--- a/arch/arm/boot/dts/qcom/whyred/whyred-pm660.dtsi
+++ b/arch/arm/boot/dts/qcom/whyred/whyred-pm660.dtsi
@@ -44,6 +44,8 @@
 	qcom,fcc-max-ua = <2500000>;
 	qcom,thermal-mitigation
 			= <2500000 2300000 2000000 1500000 1000000 400000 200000>;
+	qcom,thermal-mitigation-china
+			= <2500000 2300000 2000000 1500000 1000000 400000 200000>;
 };
 
 &pm660_fg {
